--- a/dmrpPublications.bib
+++ b/dmrpPublications.bib
@@ -799,7 +799,7 @@
 }
 
 @Article{Santos2016,
-  author    = {Santos, Renato Augusto Correa and Goldman, Gustavo H. and Ria\no-Pach\'on, Diego Mauricio},
+  author    = {Santos, Renato Augusto Correa and Goldman, Gustavo H. and Ria\~no\-Pach\'on, Diego Mauricio},
   title     = {ploidyNGS: Visually exploring ploidy with Next Generation Sequencing data},
   journal   = {BioRxiv},
   year      = {2016},
