--- a/dmrpPublications.bib
+++ b/dmrpPublications.bib
@@ -856,53 +856,114 @@
 }
 
 @Article{Vries2017,
-  author        = {de Vries, Ronald P and Riley, Robert and Wiebenga, Ad and Aguilar-Osorio, Guillermo and Amillis, Sotiris and Uchima, Cristiane Akemi and Anderluh, Gregor and Asadollahi, Mojtaba and Askin, Marion and Barry, Kerrie and Battaglia, Evy and Bayram, Özgür and Benocci, Tiziano and Braus-Stromeyer, Susanna A and Caldana, Camila and Cánovas, David and Cerqueira, Gustavo C and Chen, Fusheng and Chen, Wanping and Choi, Cindy and Clum, Alicia and Dos Santos, Renato Augusto Corrêa and Damásio, André Ricardo de Lima and Diallinas, George and Emri, Tamás and Fekete, Erzsébet and Flipphi, Michel and Freyberg, Susanne and Gallo, Antonia and Gournas, Christos and Habgood, Rob and Hainaut, Matthieu and Harispe, María Laura and Henrissat, Bernard and Hildén, Kristiina S and Hope, Ryan and Hossain, Abeer and Karabika, Eugenia and Karaffa, Levente and Karányi, Zsolt and Kraševec, Nada and Kuo, Alan and Kusch, Harald and LaButti, Kurt and Lagendijk, Ellen L and Lapidus, Alla and Levasseur, Anthony and Lindquist, Erika and Lipzen, Anna and Logrieco, Antonio F and MacCabe, Andrew and Mäkelä, Miia R and Malavazi, Iran and Melin, Petter and Meyer, Vera and Mielnichuk, Natalia and Miskei, Márton and Molnár, Ákos P and Mulé, Giuseppina and Ngan, Chew Yee and Orejas, Margarita and Orosz, Erzsébet and Ouedraogo, Jean Paul and Overkamp, Karin M and Park, Hee-Soo and Perrone, Giancarlo and Piumi, Francois and Punt, Peter J and Ram, Arthur F J and Ramón, Ana and Rauscher, Stefan and Record, Eric and Riaño-Pachón, Diego Mauricio and Robert, Vincent and Röhrig, Julian and Ruller, Roberto and Salamov, Asaf and Salih, Nadhira S and Samson, Rob A and Sándor, Erzsébet and Sanguinetti, Manuel and Schütze, Tabea and Sepčić, Kristina and Shelest, Ekaterina and Sherlock, Gavin and Sophianopoulou, Vicky and Squina, Fabio M and Sun, Hui and Susca, Antonia and Todd, Richard B and Tsang, Adrian and Unkles, Shiela E and van de Wiele, Nathalie and van Rossen-Uffink, Diana and Oliveira, Juliana Velasco de Castro and Vesth, Tammi C and Visser, Jaap and Yu, Jae-Hyuk and Zhou, Miaomiao and Andersen, Mikael R and Archer, David B and Baker, Scott E and Benoit, Isabelle and Brakhage, Axel A and Braus, Gerhard H and Fischer, Reinhard and Frisvad, Jens C and Goldman, Gustavo H and Houbraken, Jos and Oakley, Berl and Pócsi, István and Scazzocchio, Claudio and Seiboth, Bernhard and vanKuyk, Patricia A and Wortman, Jennifer and Dyer, Paul S and Grigoriev, Igor V},
-  title         = {Comparative genomics reveals high biological diversity and specific adaptations in the industrially and medically important fungal genus Aspergillus.},
-  journal       = {Genome biology},
-  year          = {2017},
-  volume        = {18},
-  pages         = {28},
-  month         = feb,
-  issn          = {1474-760X},
-  __markedentry = {[diriano:]},
-  abstract      = {The fungal genus Aspergillus is of critical importance to humankind. Species include those with industrial applications, important pathogens of humans, animals and crops, a source of potent carcinogenic contaminants of food, and an important genetic model. The genome sequences of eight aspergilli have already been explored to investigate aspects of fungal biology, raising questions about evolution and specialization within this genus. We have generated genome sequences for ten novel, highly diverse Aspergillus species and compared these in detail to sister and more distant genera. Comparative studies of key aspects of fungal biology, including primary and secondary metabolism, stress response, biomass degradation, and signal transduction, revealed both conservation and diversity among the species. Observed genomic differences were validated with experimental studies. This revealed several highlights, such as the potential for sex in asexual species, organic acid production genes being a key feature of black aspergilli, alternative approaches for degrading plant biomass, and indications for the genetic basis of stress response. A genome-wide phylogenetic analysis demonstrated in detail the relationship of the newly genome sequenced species with other aspergilli. Many aspects of biological differences between fungal species cannot be explained by current knowledge obtained from genome sequences. The comparative genomics and experimental study, presented here, allows for the first time a genus-wide view of the biological diversity of the aspergilli and in many, but not all, cases linked genome differences to phenotype. Insights gained could be exploited for biotechnological and medical applications of fungi.},
-  country       = {England},
-  created       = {2017-02-15},
-  doi           = {10.1186/s13059-017-1151-0},
-  issn-linking  = {1474-7596},
-  issue         = {1},
-  keywords      = {Aspergillus; Comparative genomics; Fungal biology; Genome sequencing},
-  nlm-id        = {100960660},
-  owner         = {NLM},
-  pii           = {10.1186/s13059-017-1151-0},
-  pmc           = {PMC5307856},
-  pmid          = {28196534},
-  pubmodel      = {Electronic},
-  pubstatus     = {epublish},
-  revised       = {2017-03-14},
+  author       = {de Vries, Ronald P and Riley, Robert and Wiebenga, Ad and Aguilar-Osorio, Guillermo and Amillis, Sotiris and Uchima, Cristiane Akemi and Anderluh, Gregor and Asadollahi, Mojtaba and Askin, Marion and Barry, Kerrie and Battaglia, Evy and Bayram, Özgür and Benocci, Tiziano and Braus-Stromeyer, Susanna A and Caldana, Camila and Cánovas, David and Cerqueira, Gustavo C and Chen, Fusheng and Chen, Wanping and Choi, Cindy and Clum, Alicia and Dos Santos, Renato Augusto Corrêa and Damásio, André Ricardo de Lima and Diallinas, George and Emri, Tamás and Fekete, Erzsébet and Flipphi, Michel and Freyberg, Susanne and Gallo, Antonia and Gournas, Christos and Habgood, Rob and Hainaut, Matthieu and Harispe, María Laura and Henrissat, Bernard and Hildén, Kristiina S and Hope, Ryan and Hossain, Abeer and Karabika, Eugenia and Karaffa, Levente and Karányi, Zsolt and Kraševec, Nada and Kuo, Alan and Kusch, Harald and LaButti, Kurt and Lagendijk, Ellen L and Lapidus, Alla and Levasseur, Anthony and Lindquist, Erika and Lipzen, Anna and Logrieco, Antonio F and MacCabe, Andrew and Mäkelä, Miia R and Malavazi, Iran and Melin, Petter and Meyer, Vera and Mielnichuk, Natalia and Miskei, Márton and Molnár, Ákos P and Mulé, Giuseppina and Ngan, Chew Yee and Orejas, Margarita and Orosz, Erzsébet and Ouedraogo, Jean Paul and Overkamp, Karin M and Park, Hee-Soo and Perrone, Giancarlo and Piumi, Francois and Punt, Peter J and Ram, Arthur F J and Ramón, Ana and Rauscher, Stefan and Record, Eric and Riaño-Pachón, Diego Mauricio and Robert, Vincent and Röhrig, Julian and Ruller, Roberto and Salamov, Asaf and Salih, Nadhira S and Samson, Rob A and Sándor, Erzsébet and Sanguinetti, Manuel and Schütze, Tabea and Sepčić, Kristina and Shelest, Ekaterina and Sherlock, Gavin and Sophianopoulou, Vicky and Squina, Fabio M and Sun, Hui and Susca, Antonia and Todd, Richard B and Tsang, Adrian and Unkles, Shiela E and van de Wiele, Nathalie and van Rossen-Uffink, Diana and Oliveira, Juliana Velasco de Castro and Vesth, Tammi C and Visser, Jaap and Yu, Jae-Hyuk and Zhou, Miaomiao and Andersen, Mikael R and Archer, David B and Baker, Scott E and Benoit, Isabelle and Brakhage, Axel A and Braus, Gerhard H and Fischer, Reinhard and Frisvad, Jens C and Goldman, Gustavo H and Houbraken, Jos and Oakley, Berl and Pócsi, István and Scazzocchio, Claudio and Seiboth, Bernhard and vanKuyk, Patricia A and Wortman, Jennifer and Dyer, Paul S and Grigoriev, Igor V},
+  title        = {Comparative genomics reveals high biological diversity and specific adaptations in the industrially and medically important fungal genus Aspergillus.},
+  journal      = {Genome biology},
+  year         = {2017},
+  volume       = {18},
+  pages        = {28},
+  month        = feb,
+  issn         = {1474-760X},
+  abstract     = {The fungal genus Aspergillus is of critical importance to humankind. Species include those with industrial applications, important pathogens of humans, animals and crops, a source of potent carcinogenic contaminants of food, and an important genetic model. The genome sequences of eight aspergilli have already been explored to investigate aspects of fungal biology, raising questions about evolution and specialization within this genus. We have generated genome sequences for ten novel, highly diverse Aspergillus species and compared these in detail to sister and more distant genera. Comparative studies of key aspects of fungal biology, including primary and secondary metabolism, stress response, biomass degradation, and signal transduction, revealed both conservation and diversity among the species. Observed genomic differences were validated with experimental studies. This revealed several highlights, such as the potential for sex in asexual species, organic acid production genes being a key feature of black aspergilli, alternative approaches for degrading plant biomass, and indications for the genetic basis of stress response. A genome-wide phylogenetic analysis demonstrated in detail the relationship of the newly genome sequenced species with other aspergilli. Many aspects of biological differences between fungal species cannot be explained by current knowledge obtained from genome sequences. The comparative genomics and experimental study, presented here, allows for the first time a genus-wide view of the biological diversity of the aspergilli and in many, but not all, cases linked genome differences to phenotype. Insights gained could be exploited for biotechnological and medical applications of fungi.},
+  country      = {England},
+  created      = {2017-02-15},
+  doi          = {10.1186/s13059-017-1151-0},
+  issn-linking = {1474-7596},
+  issue        = {1},
+  keywords     = {Aspergillus; Comparative genomics; Fungal biology; Genome sequencing},
+  nlm-id       = {100960660},
+  owner        = {NLM},
+  pii          = {10.1186/s13059-017-1151-0},
+  pmc          = {PMC5307856},
+  pmid         = {28196534},
+  pubmodel     = {Electronic},
+  pubstatus    = {epublish},
+  revised      = {2017-03-14},
 }
 
 @Article{PereiraSilva2017,
-  author        = {Pereira Silva, Lilian and Alves de Castro, Patrícia and Dos Reis, Thaila Fernanda and Paziani, Mario Henrique and Von Zeska Kress, Márcia Regina and Riaño-Pachón, Diego M and Hagiwara, Daisuke and Ries, Laure N A and Brown, Neil Andrew and Goldman, Gustavo H},
-  title         = {Genome-wide transcriptome analysis of Aspergillus fumigatus exposed to osmotic stress reveals regulators of osmotic and cell wall stresses that are SakA(HOG1) and MpkC dependent.},
-  journal       = {Cellular microbiology},
+  author       = {Pereira Silva, Lilian and Alves de Castro, Patrícia and Dos Reis, Thaila Fernanda and Paziani, Mario Henrique and Von Zeska Kress, Márcia Regina and Riaño-Pachón, Diego M and Hagiwara, Daisuke and Ries, Laure N A and Brown, Neil Andrew and Goldman, Gustavo H},
+  title        = {Genome-wide transcriptome analysis of Aspergillus fumigatus exposed to osmotic stress reveals regulators of osmotic and cell wall stresses that are SakA(HOG1) and MpkC dependent.},
+  journal      = {Cellular microbiology},
+  year         = {2017},
+  volume       = {19},
+  month        = apr,
+  issn         = {1462-5822},
+  abstract     = {Invasive aspergillosis is predominantly caused by Aspergillus fumigatus, and adaptations to stresses experienced within the human host are a prerequisite for the survival and virulence strategies of the pathogen. The central signal transduction pathway operating during hyperosmotic stress is the high osmolarity glycerol mitogen-activated protein kinase cascade. A. fumigatus MpkC and SakA, orthologues of the Saccharomyces cerevisiae Hog1p, constitute the primary regulator of the hyperosmotic stress response. We compared A. fumigatus wild-type transcriptional response to osmotic stress with the ΔmpkC, ΔsakA, and ΔmpkC ΔsakA strains. Our results strongly indicate that MpkC and SakA have independent and collaborative functions during the transcriptional response to transient osmotic stress. We have identified and characterized null mutants for four A. fumigatus basic leucine zipper proteins transcription factors. The atfA and atfB have comparable expression levels with the wild-type in ΔmpkC but are repressed in ΔsakA and ΔmpkC ΔsakA post-osmotic stress. The atfC and atfD have reduced expression levels in all mutants post-osmotic stress. The atfA-D null mutants displayed several phenotypes related to osmotic, oxidative, and cell wall stresses. The ΔatfA and ΔatfB were shown to be avirulent and to have attenuated virulence, respectively, in both Galleria mellonella and a neutropenic murine model of invasive pulmonary aspergillosis.},
+  country      = {England},
+  created      = {2016-10-05},
+  doi          = {10.1111/cmi.12681},
+  issn-linking = {1462-5814},
+  issue        = {4},
+  nlm-id       = {100883691},
+  owner        = {NLM},
+  pmid         = {27706915},
+  pubmodel     = {Print-Electronic},
+  pubstatus    = {ppublish},
+  revised      = {2017-03-08},
+}
+
+@Article{Borin2017,
+  author       = {Borin, Gustavo Pagotto and Sanchez, Camila Cristina and de Santana, Eliane Silva and Zanini, Guilherme Keppe and Dos Santos, Renato Augusto Corrêa and de Oliveira Pontes, Angélica and de Souza, Aline Tieppo and Dal'Mas, Roberta Maria Menegaldo Tavares Soares and Riaño-Pachón, Diego Mauricio and Goldman, Gustavo Henrique and Oliveira, Juliana Velasco de Castro},
+  title        = {Comparative transcriptome analysis reveals different strategies for degradation of steam-exploded sugarcane bagasse by Aspergillus niger and Trichoderma reesei.},
+  journal      = {BMC genomics},
+  year         = {2017},
+  volume       = {18},
+  pages        = {501},
+  month        = jun,
+  issn         = {1471-2164},
+  abstract     = {Second generation (2G) ethanol is produced by breaking down lignocellulosic biomass into fermentable sugars. In Brazil, sugarcane bagasse has been proposed as the lignocellulosic residue for this biofuel production. The enzymatic cocktails for the degradation of biomass-derived polysaccharides are mostly produced by fungi, such as Aspergillus niger and Trichoderma reesei. However, it is not yet fully understood how these microorganisms degrade plant biomass. In order to identify transcriptomic changes during steam-exploded bagasse (SEB) breakdown, we conducted a RNA-seq comparative transcriptome profiling of both fungi growing on SEB as carbon source. Particular attention was focused on CAZymes, sugar transporters, transcription factors (TFs) and other proteins related to lignocellulose degradation. Although genes coding for the main enzymes involved in biomass deconstruction were expressed by both fungal strains since the beginning of the growth in SEB, significant differences were found in their expression profiles. The expression of these enzymes is mainly regulated at the transcription level, and A. niger and T. reesei also showed differences in TFs content and in their expression. Several sugar transporters that were induced in both fungal strains could be new players on biomass degradation besides their role in sugar uptake. Interestingly, our findings revealed that in both strains several genes that code for proteins of unknown function and pro-oxidant, antioxidant, and detoxification enzymes were induced during growth in SEB as carbon source, but their specific roles on lignocellulose degradation remain to be elucidated. This is the first report of a time-course experiment monitoring the degradation of pretreated bagasse by two important fungi using the RNA-seq technology. It was possible to identify a set of genes that might be applied in several biotechnology fields. The data suggest that these two microorganisms employ different strategies for biomass breakdown. This knowledge can be exploited for the rational design of enzymatic cocktails and 2G ethanol production improvement.},
+  country      = {England},
+  created      = {2017-07-01},
+  doi          = {10.1186/s12864-017-3857-5},
+  issn-linking = {1471-2164},
+  issue        = {1},
+  keywords     = {Aspergillus niger; CAZymes; RNA-seq; Sugarcane bagasse; Transcription factors; Transporters; Trichoderma reesei},
+  nlm-id       = {100965258},
+  owner        = {NLM},
+  pii          = {10.1186/s12864-017-3857-5},
+  pmc          = {PMC5493111},
+  pmid         = {28666414},
+  pubmodel     = {Electronic},
+  pubstatus    = {epublish},
+  revised      = {2017-07-06},
+}
+
+@Article{Mandelli2017,
+  author        = {Mandelli, F and Couger, M B and Paixão, D A A and Machado, C B and Carnielli, C M and Aricetti, J A and Polikarpov, I and Prade, R and Caldana, C and Paes Leme, A F and Mercadante, A Z and Riaño-Pachón, D M and Squina, Fabio Marcio},
+  title         = {Thermal adaptation strategies of the extremophile bacterium Thermus filiformis based on multi-omics analysis.},
+  journal       = {Extremophiles : life under extreme conditions},
   year          = {2017},
-  volume        = {19},
-  month         = apr,
-  issn          = {1462-5822},
-  __markedentry = {[diriano:6]},
-  abstract      = {Invasive aspergillosis is predominantly caused by Aspergillus fumigatus, and adaptations to stresses experienced within the human host are a prerequisite for the survival and virulence strategies of the pathogen. The central signal transduction pathway operating during hyperosmotic stress is the high osmolarity glycerol mitogen-activated protein kinase cascade. A. fumigatus MpkC and SakA, orthologues of the Saccharomyces cerevisiae Hog1p, constitute the primary regulator of the hyperosmotic stress response. We compared A. fumigatus wild-type transcriptional response to osmotic stress with the ΔmpkC, ΔsakA, and ΔmpkC ΔsakA strains. Our results strongly indicate that MpkC and SakA have independent and collaborative functions during the transcriptional response to transient osmotic stress. We have identified and characterized null mutants for four A. fumigatus basic leucine zipper proteins transcription factors. The atfA and atfB have comparable expression levels with the wild-type in ΔmpkC but are repressed in ΔsakA and ΔmpkC ΔsakA post-osmotic stress. The atfC and atfD have reduced expression levels in all mutants post-osmotic stress. The atfA-D null mutants displayed several phenotypes related to osmotic, oxidative, and cell wall stresses. The ΔatfA and ΔatfB were shown to be avirulent and to have attenuated virulence, respectively, in both Galleria mellonella and a neutropenic murine model of invasive pulmonary aspergillosis.},
-  country       = {England},
-  created       = {2016-10-05},
-  doi           = {10.1111/cmi.12681},
-  issn-linking  = {1462-5814},
+  volume        = {21},
+  pages         = {775--788},
+  month         = jul,
+  issn          = {1433-4909},
+  __markedentry = {[diriano:]},
+  abstract      = {Thermus filiformis is an aerobic thermophilic bacterium isolated from a hot spring in New Zealand. The experimental study of the mechanisms of thermal adaptation is important to unveil response strategies of the microorganism to stress. In this study, the main pathways involved on T. filiformis thermoadaptation, as well as, thermozymes with potential biotechnological applications were revealed based on omics approaches. The strategy adopted in this study disclosed that pathways related to the carbohydrate metabolism were affected in response to thermoadaptation. High temperatures triggered oxidative stress, leading to repression of genes involved in glycolysis and the tricarboxylic acid cycle. During heat stress, the glucose metabolism occurred predominantly via the pentose phosphate pathway instead of the glycolysis pathway. Other processes, such as protein degradation, stringent response, and duplication of aminoacyl-tRNA synthetases, were also related to T. filiformis thermoadaptation. The heat-shock response influenced the carotenoid profile of T. filiformis, favoring the synthesis of thermozeaxanthins and thermobiszeaxanthins, which are related to membrane stabilization at high temperatures. Furthermore, antioxidant enzymes correlated with free radical scavenging, including superoxide dismutase, catalase and peroxidase, and metabolites, such as oxaloacetate and α-ketoglutarate, were accumulated at 77 °C.},
+  country       = {Germany},
+  created       = {2017-05-13},
+  doi           = {10.1007/s00792-017-0942-2},
+  issn-linking  = {1431-0651},
   issue         = {4},
-  nlm-id        = {100883691},
+  keywords      = {Metabolomics; Peroxyl radical scavenging activity; Proteomics; Thermozeaxanthins; Transcriptomics},
+  nlm-id        = {9706854},
   owner         = {NLM},
-  pmid          = {27706915},
+  pii           = {10.1007/s00792-017-0942-2},
+  pmid          = {28500387},
   pubmodel      = {Print-Electronic},
   pubstatus     = {ppublish},
-  revised       = {2017-03-08},
+  revised       = {2017-06-21},
+}
+
+@Article{Riano-Pachon2017,
+  author        = {Ria\~no-Pach\'on, DM and Mattiello, L},
+  title         = {Draft genome sequencing of the sugarcane hybrid SP80-3280 [version 2; referees: 2 approved]},
+  journal       = {F1000Research},
+  year          = {2017},
+  volume        = {6},
+  number        = {861},
+  __markedentry = {[diriano:6]},
+  doi           = {10.12688/f1000research.11859.2},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
