--- a/dmrpPublications.bib
+++ b/dmrpPublications.bib
@@ -930,29 +930,28 @@
 }
 
 @Article{Mandelli2017,
-  author        = {Mandelli, F and Couger, M B and Paixão, D A A and Machado, C B and Carnielli, C M and Aricetti, J A and Polikarpov, I and Prade, R and Caldana, C and Paes Leme, A F and Mercadante, A Z and Riaño-Pachón, D M and Squina, Fabio Marcio},
-  title         = {Thermal adaptation strategies of the extremophile bacterium Thermus filiformis based on multi-omics analysis.},
-  journal       = {Extremophiles : life under extreme conditions},
-  year          = {2017},
-  volume        = {21},
-  pages         = {775--788},
-  month         = jul,
-  issn          = {1433-4909},
-  __markedentry = {[diriano:]},
-  abstract      = {Thermus filiformis is an aerobic thermophilic bacterium isolated from a hot spring in New Zealand. The experimental study of the mechanisms of thermal adaptation is important to unveil response strategies of the microorganism to stress. In this study, the main pathways involved on T. filiformis thermoadaptation, as well as, thermozymes with potential biotechnological applications were revealed based on omics approaches. The strategy adopted in this study disclosed that pathways related to the carbohydrate metabolism were affected in response to thermoadaptation. High temperatures triggered oxidative stress, leading to repression of genes involved in glycolysis and the tricarboxylic acid cycle. During heat stress, the glucose metabolism occurred predominantly via the pentose phosphate pathway instead of the glycolysis pathway. Other processes, such as protein degradation, stringent response, and duplication of aminoacyl-tRNA synthetases, were also related to T. filiformis thermoadaptation. The heat-shock response influenced the carotenoid profile of T. filiformis, favoring the synthesis of thermozeaxanthins and thermobiszeaxanthins, which are related to membrane stabilization at high temperatures. Furthermore, antioxidant enzymes correlated with free radical scavenging, including superoxide dismutase, catalase and peroxidase, and metabolites, such as oxaloacetate and α-ketoglutarate, were accumulated at 77 °C.},
-  country       = {Germany},
-  created       = {2017-05-13},
-  doi           = {10.1007/s00792-017-0942-2},
-  issn-linking  = {1431-0651},
-  issue         = {4},
-  keywords      = {Metabolomics; Peroxyl radical scavenging activity; Proteomics; Thermozeaxanthins; Transcriptomics},
-  nlm-id        = {9706854},
-  owner         = {NLM},
-  pii           = {10.1007/s00792-017-0942-2},
-  pmid          = {28500387},
-  pubmodel      = {Print-Electronic},
-  pubstatus     = {ppublish},
-  revised       = {2017-06-21},
+  author       = {Mandelli, F and Couger, M B and Paixão, D A A and Machado, C B and Carnielli, C M and Aricetti, J A and Polikarpov, I and Prade, R and Caldana, C and Paes Leme, A F and Mercadante, A Z and Riaño-Pachón, D M and Squina, Fabio Marcio},
+  title        = {Thermal adaptation strategies of the extremophile bacterium Thermus filiformis based on multi-omics analysis.},
+  journal      = {Extremophiles : life under extreme conditions},
+  year         = {2017},
+  volume       = {21},
+  pages        = {775--788},
+  month        = jul,
+  issn         = {1433-4909},
+  abstract     = {Thermus filiformis is an aerobic thermophilic bacterium isolated from a hot spring in New Zealand. The experimental study of the mechanisms of thermal adaptation is important to unveil response strategies of the microorganism to stress. In this study, the main pathways involved on T. filiformis thermoadaptation, as well as, thermozymes with potential biotechnological applications were revealed based on omics approaches. The strategy adopted in this study disclosed that pathways related to the carbohydrate metabolism were affected in response to thermoadaptation. High temperatures triggered oxidative stress, leading to repression of genes involved in glycolysis and the tricarboxylic acid cycle. During heat stress, the glucose metabolism occurred predominantly via the pentose phosphate pathway instead of the glycolysis pathway. Other processes, such as protein degradation, stringent response, and duplication of aminoacyl-tRNA synthetases, were also related to T. filiformis thermoadaptation. The heat-shock response influenced the carotenoid profile of T. filiformis, favoring the synthesis of thermozeaxanthins and thermobiszeaxanthins, which are related to membrane stabilization at high temperatures. Furthermore, antioxidant enzymes correlated with free radical scavenging, including superoxide dismutase, catalase and peroxidase, and metabolites, such as oxaloacetate and α-ketoglutarate, were accumulated at 77 °C.},
+  country      = {Germany},
+  created      = {2017-05-13},
+  doi          = {10.1007/s00792-017-0942-2},
+  issn-linking = {1431-0651},
+  issue        = {4},
+  keywords     = {Metabolomics; Peroxyl radical scavenging activity; Proteomics; Thermozeaxanthins; Transcriptomics},
+  nlm-id       = {9706854},
+  owner        = {NLM},
+  pii          = {10.1007/s00792-017-0942-2},
+  pmid         = {28500387},
+  pubmodel     = {Print-Electronic},
+  pubstatus    = {ppublish},
+  revised      = {2017-06-21},
 }
 
 @Article{Riano-Pachon2017,
@@ -962,8 +961,31 @@
   year          = {2017},
   volume        = {6},
   number        = {861},
-  __markedentry = {[diriano:6]},
+  __markedentry = {[diriano:]},
   doi           = {10.12688/f1000research.11859.2},
+}
+
+@Article{Nobile2017,
+  author        = {Nobile, Paula Macedo and Bottcher, Alexandra and Mayer, Juliana L S and Brito, Michael S and Dos Anjos, Ivan A and Landell, Marcos Guimarães de Andrade and Vicentini, Renato and Creste, Silvana and Riaño-Pachón, Diego Mauricio and Mazzafera, Paulo},
+  title         = {Identification, classification and transcriptional profiles of dirigent domain-containing proteins in sugarcane.},
+  journal       = {Molecular genetics and genomics : MGG},
+  year          = {2017},
+  month         = jul,
+  issn          = {1617-4623},
+  __markedentry = {[diriano:6]},
+  abstract      = {Dirigent (DIR) proteins, encoded by DIR genes, are referred to as "dirigent" because they direct the outcome of the coupling of the monolignol coniferyl alcohol into (+) or (-) pinoresinol, the first intermediates in the enantiocomplementary pathways for lignan biosynthesis. DIR domain-containing or DIR-like proteins are, thus, termed for not having a clear characterization. A transcriptome- and genome-wide survey of DIR domain-containing proteins in sugarcane was carried out, in addition to phylogenetic, physicochemical and transcriptional analyses. A total of 120 non-redundant sequences containing the DIR domain were identified and classified into 64 groups according to phylogenetic and sequence alignment analyses. In silico analysis of transcript abundance showed that these sequences are expressed at low levels in leaves and genes in the same phylogenetic clade have similar expression patterns. Expression analysis of ShDIR1-like transcripts in the culm internodes of sugarcane demonstrates their abundance in mature internodes, their induction by nitrogen fertilization and their predominant expression in cells that have a lignified secondary cell wall, such as vascular bundles of young internodes and parenchymal cells of the pith of mature internodes. Due to the lack of information about the functional role of DIR in plants, a possible relationship is discussed between the ShDIR1-like transcriptional profile and cell wall development in parenchyma cells of sugarcane culm, which typically accumulates large amounts of sucrose. The number of genes encoding the DIR domain-containing proteins in sugarcane is intriguing and is an indication per se that these proteins may have an important metabolic role and thus deserve to be better studied.},
+  country       = {Germany},
+  created       = {2017-07-12},
+  doi           = {10.1007/s00438-017-1349-6},
+  issn-linking  = {1617-4623},
+  keywords      = {Lignan; Phylogeny; Protein homology modeling; Saccharum spp.; Transcriptome- and genome-wide survey},
+  nlm-id        = {101093320},
+  owner         = {NLM},
+  pii           = {10.1007/s00438-017-1349-6},
+  pmid          = {28699001},
+  pubmodel      = {Print-Electronic},
+  pubstatus     = {aheadofprint},
+  revised       = {2017-07-12},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
